--- a/task-module/src/components/TaskList/TaskList.css
+++ b/task-module/src/components/TaskList/TaskList.css
@@ -1,31 +1,40 @@
 .task-list {
-    font-family: Arial, sans-serif;
-    padding: 20px;
-  }
-  
-  .task-list h1 {
-    color: #333;
-  }
-  
-  .task-list ul {
-    list-style-type: none;
-    padding: 0;
-  }
-  
-  .task-list li {
-    background: #f9f9f9;
-    margin: 10px 0;
-    padding: 10px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-  }
-  
-  .task-list h2 {
-    margin: 0;
-    color: #555;
-  }
-  
-  .task-list p {
-    margin: 5px 0 0;
-    color: #777;
-  }
+  font-family: Arial, sans-serif;
+  padding: 20px;
+}
+
+.task-list h1 {
+  color: #333;
+}
+
+.task-list ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.task-list li {
+  background: #f9f9f9;
+  margin: 10px 0;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+}
+
+.task-list h2 {
+  margin: 0;
+  color: #555;
+}
+
+.task-list p {
+  margin: 5px 0 0;
+  color: #777;
+}
+
+.completed {
+  opacity: 0.7;
+  background-color: #e0f7fa;  /* Светло-голубой фон для выполненных задач */
+}
+
+.completed h2 {
+  text-decoration: line-through;  /* Зачеркнутый текст для выполненных задач */
+}
